# magenta

./: .gitignore  Cargo.toml  README.md
src/: .main.rs.kate-swp  main.rs
