[package]
name = "magenta"
version = "0.1.0"
authors = ["Alex Baldwin <alexbaldwin2876@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = { version = "3", features = ["openssl"] }
openssl = { version = "0.10", features = ["v110"] }
serde = "1"
serde_json = "1"
